Mostrando en pantalla los platillos obtenidos en la consulta a la API

--- a/index.html
+++ b/index.html
@@ -20,8 +20,21 @@
 
     <main id="platillos" class="container bg-light mt-5 p-4 d-none">
         <h2  class="text-center my-4">Platillos</h2>
+        <div class="overflow-scroll">
+            <table class="table w-100 h-50">
+                <thead class="bg-success">
+                    <tr>
+                        <th class="fw-bold text-white text-uppercase">Platillo</th>
+                        <th class="fw-bold text-white text-uppercase">Precio</th>
+                        <th class="fw-bold text-white text-uppercase">Categoria</th>
+                        <th class="fw-bold text-white text-uppercase">Cantidad</th>
+                    </tr>
+                </thead>
+                <tbody class="contenido">
 
-        <div class="contenido"></div>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     
